--- a/public/index.html
+++ b/public/index.html
@@ -126,8 +126,12 @@
       startBtn.onclick = async () => {
         startBtn.disabled = true;
 
+        // Request screen capture with max resolution and lower frame rate
         const stream = await navigator.mediaDevices.getDisplayMedia({
-          video: true,
+          video: {
+            width: { max: 1280 },
+            height: { max: 720 },
+          },
         });
 
         video.srcObject = stream;
@@ -137,6 +141,22 @@
         });
 
         stream.getTracks().forEach((track) => pc.addTrack(track, stream));
+
+        // Configure encoding parameters to limit bitrate and frame rate for low bandwidth
+        const sender = pc.getSenders().find((s) => s.track.kind === "video");
+        if (sender) {
+          const parameters = sender.getParameters();
+
+          if (!parameters.encodings) parameters.encodings = [{}];
+
+          parameters.encodings[0].maxBitrate = 300_000; // 300 kbps
+          parameters.encodings[0].priority = "high";
+          parameters.degradationPreference = "maintain-framerate";
+
+          sender.setParameters(parameters).catch((e) => {
+            console.warn("Failed to set sender parameters:", e);
+          });
+        }
 
         pc.onicecandidate = (e) => {
           if (e.candidate) {
@@ -156,6 +176,17 @@
 
           const offer = await pc.createOffer();
           await pc.setLocalDescription(offer);
+
+          // Optional: SDP munging example to tweak max frame rate (commented out)
+          /*
+          let sdp = offer.sdp;
+          sdp = sdp.replace(/(a=fmtp:\d+ .*max-fr=)\d+/g, '$115');
+          const newOffer = new RTCSessionDescription({ type: "offer", sdp });
+          await pc.setLocalDescription(newOffer);
+          ws.send(JSON.stringify({ type: "offer", offer: newOffer }));
+          return;
+          */
+
           ws.send(JSON.stringify({ type: "offer", offer }));
         };
 
