--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,42 @@
     </style>
   </head>
   <body>
-    <h2>WebRTC Streamer</h2>
+    <div
+      style="
+        display: flex;
+        gap: 0;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      "
+    >
+      <button
+        style="
+          padding: 10px 20px;
+          border: none;
+          background: #007bff;
+          color: white;
+          font-weight: bold;
+          cursor: default;
+        "
+      >
+        Streamer
+      </button>
+      <a href="/viewer.html" style="text-decoration: none">
+        <button
+          style="
+            padding: 10px 20px;
+            border: none;
+            background: #e0e0e0;
+            color: #333;
+            cursor: pointer;
+          "
+        >
+          Viewer
+        </button>
+      </a>
+    </div>
 
     <div class="controls">
       <div class="control-group">
@@ -173,12 +208,12 @@
       <video id="localVideo" autoplay muted playsinline></video>
     </div>
 
-    <div class="info-panel">
+    <!-- <div class="info-panel">
       <div class="info-card">FPS: <span id="fps">0</span></div>
       <div class="info-card">
         Last Frame: <span id="timeSince">0.0</span>s ago
       </div>
-    </div>
+    </div> -->
 
     <script src="index.js"></script>
   </body>
